# exalt

./: .gitignore
exalt/: CMakeLists.txt  Kconfig  prj.conf
exalt/include/exalt/: ble_service.h  blink_service.h  common.h
exalt/src/: main.c  main.cpp
exalt/src/services/: CMakeLists.txt  ble_service.c  blink_service.c
